# mbed-os

./: README.md
targets/: targets.json5
targets/TARGET_NXP/: CMakeLists.txt
targets/TARGET_NXP/TARGET_LPC11XX_11UXX/: CMakeLists.txt  gpio_irq_api.c  sleep.c
targets/TARGET_NXP/TARGET_LPC11XX_11UXX/TARGET_LPC11U24_301/: CMakeLists.txt  PinNames.h
targets/TARGET_NXP/TARGET_LPC11XX_11UXX/TARGET_LPC11U24_401/: CMakeLists.txt  PinNames.h
targets/TARGET_NXP/TARGET_LPC11XX_11UXX/device/TOOLCHAIN_GCC_ARM/: LPC11U24.ld  startup_LPC11xx.S
